# PareshTODOApi

./: Cargo.toml  LICENSE  README.md  Rocket.toml
.github/workflows/: rust.yml
doc/: create_team.md  exist.md  get_location.md  invite_team.md  leave.md  login.md  members.md  my_teams.md  picture.md  refresh_token.md  register.md  set_country_code.md  set_location.md
src/: main.rs
src/teams/: create.rs  invite.rs  join.rs  mod.rs  my.rs  team.rs
src/user/: location.rs  login.rs  mod.rs  register.rs  token.rs
src/utils/: mongo.rs
