[package]
name = "back-end"
version = "0.1.0"
authors = ["KillianG <killian.gardahaut@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
json = "*"
mongodb = { version = "0.3.11", features = ["ssl"] }
sha2 = "*"
jsonwebtoken = "*"
chrono = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
rand = "0.7.2"
rocket_cors = "*"

